# DIY_AV-Entrainment-Fast

./: AGENTS.md  AGENT_CONVERSION_PLAN.md  BUILD_GUIDE.md  CMakeLists.txt  CMakePresets.json  README_Audio.md  setup.sh
cpp_audio/: CMakeLists.txt  Common.h  main.cpp
cpp_audio/models/: StepModel.h  VoiceModel.cpp
cpp_audio/presets/: NoiseParams.cpp  VoicePreset.cpp
cpp_audio/synths/: HybridQamMonauralBeat.cpp  NoiseFlanger.cpp  SpatialAngleModulation.cpp  WaveShapeStereoAm.cpp
src/audio/: REALTIME_BACKEND_PLAN.md  main.py
src/audio/realtime_backend_rs/: Cargo.toml
src/audio/realtime_backend_rs/src/: engine.rs  lib.rs  main.rs  models.rs  synths.rs
src/audio/ui/: __init__.py  collapsible_box.py  preferences_dialog.py  simulator.py  step_preview_component.py  voice_editor_dialog.py
src/cpp_audio/: AudioUtils.cpp  AudioUtils.h  BufferAudioSource.h  CMakeLists.txt  Common.cpp  REALTIME_BACKEND_PLAN.md  StepPreviewer.cpp  StepPreviewer.h  SynthFunctions.cpp  SynthFunctions.h  Track.cpp  Track.h  VarUtils.h  main.cpp  realtime_player.cpp
src/cpp_audio/core/: Common.cpp  StepPreviewer.cpp  StepPreviewer.h  Track.cpp  Track.h  TrackXml.cpp  TrackXml.h  VarUtils.h
src/cpp_audio/examples/: example_track.xml
src/cpp_audio/models/: NoiseParams.h  StepModel.cpp  StepModel.h  TrackData.h  VoiceModel.cpp  VoiceModel.h
src/cpp_audio/presets/: NoiseParams.cpp  NoiseParams.h  VoicePreset.h
src/cpp_audio/synths/: BinauralBeat.cpp  BinauralBeat.h  HybridQamMonauralBeat.cpp  HybridQamMonauralBeat.h  IsochronicTone.cpp  IsochronicTone.h  MonauralBeatStereoAmps.cpp  MonauralBeatStereoAmps.h  NoiseFlanger.cpp  NoiseFlanger.h  QamBeat.cpp  QamBeat.h  RhythmicWaveshaping.cpp  RhythmicWaveshaping.h  SpatialAngleModulation.cpp  SpatialAngleModulation.h  StereoAMIndependent.cpp  StereoAMIndependent.h  Subliminals.cpp  Subliminals.h  SynthFunctions.h  WaveShapeStereoAm.cpp  WaveShapeStereoAm.h
src/cpp_audio/ui/: CollapsibleBox.cpp  CollapsibleBox.h  DefaultVoiceDialog.cpp  DefaultVoiceDialog.h  FrequencyTesterDialog.cpp  FrequencyTesterDialog.h  GlobalSettingsComponent.cpp  GlobalSettingsComponent.h  NoiseGeneratorDialog.cpp  NoiseGeneratorDialog.h  OverlayClipDialog.cpp  OverlayClipDialog.h  OverlayClipPanel.cpp  OverlayClipPanel.h  Preferences.h  PreferencesDialog.cpp  PreferencesDialog.h  Simulator.cpp  Simulator.h  StepConfigPanel.cpp  StepConfigPanel.h  StepListPanel.cpp  StepListPanel.h  StepPreviewComponent.cpp  StepPreviewComponent.h  SubliminalDialog.cpp  SubliminalDialog.h  Themes.cpp  Themes.h  ToolsComponent.cpp  ToolsComponent.h  VoiceEditorComponent.cpp  VoiceEditorComponent.h  VoiceEditorDialog.cpp  VoiceEditorDialog.h  main.cpp
src/cpp_audio/utils/: Common.cpp  Common.h  StepPreviewer.cpp  VarUtils.h
src/cpp_ui/: CMakeLists.txt  CollapsibleBox.cpp  DefaultVoiceDialog.cpp  DefaultVoiceDialog.h  FrequencyTesterDialog.cpp  NoiseGeneratorDialog.cpp  NoiseGeneratorDialog.h  OverlayClipDialog.cpp  OverlayClipPanel.h  PreferencesDialog.cpp  StepConfigPanel.cpp  StepListPanel.cpp  StepPreviewComponent.cpp  StepPreviewComponent.h  SubliminalDialog.cpp  Themes.cpp  VoiceEditorDialog.cpp  main.cpp
src/rust_audio/: Cargo.toml
src/rust_audio/src/: engine.rs  lib.rs  main.rs  models.rs  synth.rs
